[gd_scene load_steps=7 format=3 uid="uid://cifn515un773v"]

[ext_resource type="Script" uid="uid://dn1lb0sgp1svf" path="res://scripts/GameField.gd" id="1_field"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_drag"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_board"]
albedo_color = Color(0.2, 0.3, 0.4, 1)
metallic = 0.3
roughness = 0.7

[sub_resource type="PlaneMesh" id="PlaneMesh_cell"]
size = Vector2(1.8, 1.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cell"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.1)
emission_enabled = true
emission = Color(0.4, 0.6, 0.8, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bench"]
albedo_color = Color(0.3, 0.2, 0.1, 1)
metallic = 0.2
roughness = 0.8

[node name="GameField" type="Node3D"]
script = ExtResource("1_field")

[node name="DragPlane" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="DragPlane"]
shape = SubResource("WorldBoundaryShape3D_drag")

[node name="GameBoard" type="Node3D" parent="."]

[node name="Ground" type="CSGBox3D" parent="GameBoard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
size = Vector3(12, 0.2, 8)
material = SubResource("StandardMaterial3D_board")

[node name="GridCells" type="Node3D" parent="GameBoard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)

[node name="CellHighlight" type="MeshInstance3D" parent="GameBoard"]
visible = false
mesh = SubResource("PlaneMesh_cell")
surface_material_override/0 = SubResource("StandardMaterial3D_cell")

[node name="Bench" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.01412, 0, 5.06757)

[node name="Ground" type="CSGBox3D" parent="Bench"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
size = Vector3(18, 0.2, 2)
material = SubResource("StandardMaterial3D_bench")

[node name="BenchCells" type="Node3D" parent="Bench"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)

[node name="CellHighlight" type="MeshInstance3D" parent="Bench"]
visible = false
mesh = SubResource("PlaneMesh_cell")
surface_material_override/0 = SubResource("StandardMaterial3D_cell")
